@@ -944,7 +944,7 @@ void test_encodeECI(void)
 	testFinish();
 }
 
-int main(void)
+int main(int argc, char **argv)
 {
 	test_encodeNumeric();
 	test_encodeNumeric2();
