@@ -7,6 +7,8 @@
 	  - Use SDL_WaitEvent() instead of SDL_PollEvent().
 	* tests/common.h:
 	  - Added show_QRcode() for testing purposes. (Thanks to Sunil Maganally)
+	* tests/*.c:
+	  - main()'s arguments now correctly declared.
 
 2014.07.25 Kentaro FUKUCHI <kentaro@fukuchi.org>
 	* tests/URI_testset.inc, tests/test_split_urls.c, tests/Makefile.am,
